--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.10.0",
+    "daisyui": "^5.0.43",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.6.2",
+    "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
