--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.10.0",
@@ -19,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.3",
