--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,11 @@
     "@tailwindcss/vite": "^4.1.10",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.0.43",
+    "motion": "^12.19.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -24,7 +27,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-syntax-highlighter": "^15.6.1",
-    "recharts": "^2.15.3",
+    "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
