--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-syntax-highlighter": "^15.6.1",
