--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.10"
   },
