--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
+    "react-share": "^5.2.2",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.22.1",
