--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-share": "^5.2.2",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.22.1",
     "tailwindcss": "^4.1.10"
   },
