--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,13 @@
     "daisyui": "^5.0.43",
     "motion": "^12.19.1",
     "quill": "^2.0.3",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "react-quill-new": "^3.4.6",
+    "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-share": "^5.2.2",
